--- a/src/App.css
+++ b/src/App.css
@@ -135,8 +135,7 @@ footer a:hover{
 .lfh1{
     margin: 0px 0 50px 0;
     text-align: center;
-   color: yellow;
-   
+   color: #fdf004;
    /* font-size: 2.2rem; */
    position: relative;
    display: block
@@ -170,7 +169,7 @@ footer a:hover{
     /* height: 400px; */
     border: 2px solid #646464;
     /* margin: 50px; */
-    /* background-color: white; */
+    background-color: black;
     border-radius: 10px;
     padding: 20px;
 }
@@ -197,14 +196,14 @@ footer a:hover{
     margin: 20px 0;
 }
 .card-desc h2{
-color: white;
+color: yellow;
 margin-bottom:0px;
 font-size: 20px;
 text-decoration: none;
 height: 50px;
 }
 .card-desc p{
-color:gray;
+color:white;
 overflow: hidden;
 text-overflow: ellipsis;
 display: -webkit-box;
@@ -328,11 +327,12 @@ width: 500px;
 
 }
 .details-card{
-    margin-top: 10px;
+    margin-top: 25px;
     color: white;
-    border: 2px solid white;
-    width: 450px;
+    border: 2px solid yellow;
+    width: 420px;
     padding: 20px;
+   
     border-radius: 10px;
 }
 .details-card .img-container{
@@ -348,7 +348,7 @@ width: 500px;
     object-fit: cover;
     border-radius: 10px;
 }
-.details-card h1{
+.details-card h2{
     text-align: center;
     margin: 12px 0;
 }
@@ -370,6 +370,7 @@ width: 500px;
     display: flex;
     align-items: center;
     gap: 5px ;
+   
     border-radius: 8px;
 }
 .details-container{
@@ -478,7 +479,6 @@ nav{
 
     .lfh1{
         margin-bottom: 25px;
-        color:#fdf004;
         font-size: 1.8rem ;
     }
     .lfh1::after{
